--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Magic Tiles Lite — Hard Mode + Music (v10)</title>
+  <title>Magic Tiles Lite — Hard Mode + Music (v11)</title>
   <style>
-    /* —— Variables & Background —— */
     :root{--tile-top:#4facfe;--tile-bottom:#00f2fe;--bg-1:#0f0c29;--bg-2:#302b63;--bg-3:#24243e;}
     html,body{margin:0;padding:0;height:100%;overflow:hidden;font-family:"Segoe UI",Tahoma,Geneva,Verdana,sans-serif;display:flex;align-items:center;justify-content:center;background:linear-gradient(135deg,var(--bg-1),var(--bg-2),var(--bg-3));background-size:400% 400%;animation:bgShift 20s ease-in-out infinite;}
     @keyframes bgShift{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
     body.celebrate{animation:bgHue 8s linear infinite;}
     @keyframes bgHue{0%{filter:hue-rotate(0deg)}100%{filter:hue-rotate(360deg)}}
 
-    /* —— HUD —— */
     #score{position:absolute;top:16px;left:50%;transform:translateX(-50%);padding:6px 24px;font-size:26px;color:#fff;background:rgba(255,255,255,.08);border:1px solid rgba(255,255,255,.18);border-radius:999px;backdrop-filter:blur(8px);box-shadow:0 4px 12px rgba(0,0,0,.35);z-index:20;user-select:none;}
     #audioBtn{position:absolute;top:16px;right:16px;z-index:25;background:rgba(255,255,255,.15);border:none;border-radius:50%;padding:8px 10px;font-size:18px;color:#fff;cursor:pointer;backdrop-filter:blur(6px);}
     #progressContainer{position:absolute;top:64px;left:50%;transform:translateX(-50%);width:320px;height:12px;border-radius:6px;overflow:hidden;background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.25);backdrop-filter:blur(8px);box-shadow:0 2px 6px rgba(0,0,0,.3);z-index:15;}
@@ -20,17 +18,15 @@
     #star{position:absolute;right:-18px;top:-10px;font-size:28px;opacity:.85;pointer-events:none;z-index:25;transition:transform .6s ease,filter .6s ease;}
     #star.shine{filter:drop-shadow(0 0 6px #fff) drop-shadow(0 0 12px #ff0);transform:scale(1.3) rotate(15deg);}  
 
-    /* —— Canvas —— */
     #gameCanvas{width:400px;height:600px;border-radius:20px;background:#111;box-shadow:0 20px 40px rgba(0,0,0,.6),inset 0 0 40px rgba(0,0,0,.8);touch-action:none;display:block;cursor:pointer;}
     .lane-sep{position:absolute;width:2px;height:600px;pointer-events:none;top:calc(50% - 300px);background:linear-gradient(to bottom,transparent 0%,rgba(255,255,255,.07) 50%,transparent 100%);z-index:2;}
 
-    /* —— Overlay —— */
     #overlay{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);color:#fff;font-size:24px;text-align:center;backdrop-filter:blur(4px);user-select:none;pointer-events:none;z-index:30;}
   </style>
 </head>
 <body>
-  <!-- Audio -->
-  <audio id="bgm" src="https://cdn.pixabay.com/download/audio/2022/10/18/audio_eda73d5557.mp3?filename=pop-hip-hop-bounce-124441.mp3" preload="auto"></audio>
+  <!-- Audio (cross-origin allowed) -->
+  <audio id="bgm" crossorigin="anonymous" src="https://cdn.pixabay.com/download/audio/2022/10/18/audio_eda73d5557.mp3?filename=pop-hip-hop-bounce-124441.mp3" preload="auto"></audio>
 
   <!-- HUD -->
   <div id="score">Score 0</div>
@@ -47,7 +43,6 @@
 
   <script>
   (function(){
-    /* —— Grab elements —— */
     const canvas=document.getElementById('gameCanvas');
     const ctx=canvas.getContext('2d');
     const scoreEl=document.getElementById('score');
@@ -57,42 +52,40 @@
     const overlay=document.getElementById('overlay');
     const audioBtn=document.getElementById('audioBtn');
 
-    /* —— Config —— */
     const LANES=4, LANE_WIDTH=canvas.width/LANES, TILE_HEIGHT=110;
     const BPM=120, SPAWN_INTERVAL=60000/BPM;
     const BASE_SPEED=4.5, SPEED_STEP=0.08, MAX_PROGRESS=100;
 
-    /* —— State —— */
     let tiles=[], speed=BASE_SPEED, score=0;
     let running=false, barFull=false, spawnTimer=null;
 
-    /* —— Game helpers —— */
     function spawnTile(){tiles.push({lane:Math.floor(Math.random()*LANES),y:-TILE_HEIGHT});}
     function updateScore(v){scoreEl.textContent=`Score ${v}`;progBar.style.width=`${Math.min(v,MAX_PROGRESS)/MAX_PROGRESS*100}%`;if(!barFull&&v>=MAX_PROGRESS)celebrate();}
     function celebrate(){barFull=true;document.body.classList.add('celebrate');starEl.classList.add('shine');document.documentElement.style.setProperty('--tile-top','#ff9a9e');document.documentElement.style.setProperty('--tile-bottom','#fad0c4');}
 
-    /* —— Game flow —— */
     function startGame(){if(running) return;running=true;barFull=false;tiles=[];score=0;speed=BASE_SPEED;document.body.classList.remove('celebrate');starEl.classList.remove('shine');document.documentElement.style.setProperty('--tile-top','#4facfe');document.documentElement.style.setProperty('--tile-bottom','#00f2fe');updateScore(0);overlay.style.display='none';spawnTile();clearInterval(spawnTimer);spawnTimer=setInterval(spawnTile,SPAWN_INTERVAL);requestAnimationFrame(loop);}    
     function endGame(){running=false;clearInterval(spawnTimer);spawnTimer=null;overlay.innerHTML='Game Over<br/>Tap anywhere or press any key to restart';overlay.style.display='block';}
 
-    function hit(l,clickY){if(!running)return;const target=tiles.find(t=>clickY===null? t.lane===l && t.y+TILE_HEIGHT>canvas.height-TILE_HEIGHT*1.25 : t.lane===l && clickY>=t.y && clickY<=t.y+TILE_HEIGHT); if(target){score++;updateScore(score);speed+=SPEED_STEP;tiles.splice(tiles.indexOf(target),1);}else endGame();}
+    function hit(l,clickY){if(!running)return;const tgt=tiles.find(t=>clickY===null? t.lane===l && t.y+TILE_HEIGHT>canvas.height-TILE_HEIGHT*1.25 : t.lane===l && clickY>=t.y && clickY<=t.y+TILE_HEIGHT); if(tgt){score++;updateScore(score);speed+=SPEED_STEP;tiles.splice(tiles.indexOf(tgt),1);}else endGame();}
 
-    /* —— Render loop —— */
     function drawTile(l,y){const x=l*LANE_WIDTH+4;const g=ctx.createLinearGradient(0,y,0,y+TILE_HEIGHT);g.addColorStop(0,getComputedStyle(document.documentElement).getPropertyValue('--tile-top'));g.addColorStop(1,getComputedStyle(document.documentElement).getPropertyValue('--tile-bottom'));ctx.fillStyle=g;ctx.shadowColor='#fff';ctx.shadowBlur=barFull?15:10;ctx.fillRect(x,y,LANE_WIDTH-8,TILE_HEIGHT);ctx.shadowBlur=0;}
     function loop(){if(!running)return;tiles.forEach(t=>t.y+=speed);if(tiles.some(t=>t.y+TILE_HEIGHT>=canvas.height)){endGame();return;}tiles=tiles.filter(t=>t.y<canvas.height);ctx.clearRect(0,0,canvas.width,canvas.height);tiles.forEach(t=>drawTile(t.lane,t.y));requestAnimationFrame(loop);}    
 
-    /* —— Audio button —— */
+    /* —— AUDIO HANDLING —— */
+    audio.loop=true; // continuous music
     function updateAudioIcon(){audioBtn.textContent=audio.paused?'🔊':'🔈';}
-    audioBtn.addEventListener('pointerdown',e=>{e.stopPropagation();/* prevent game click */});
-    audioBtn.addEventListener('click',()=>{if(audio.paused){audio.play().catch(()=>{});}else{audio.pause();}updateAudioIcon();});
+    audioBtn.addEventListener('pointerdown',e=>{e.stopPropagation();});
+    audioBtn.addEventListener('click',e=>{e.stopPropagation();if(audio.paused){audio.play().then(updateAudioIcon).catch(()=>alert('Audio failed to play (browser block)'));}else{audio.pause();updateAudioIcon();}});
+    audio.addEventListener('play',updateAudioIcon);
+    audio.addEventListener('pause',updateAudioIcon);
 
-    /* —— Input —— */
-    document.addEventListener('pointerdown',e=>{if(e.target===audioBtn) return;/* handled */ const rect=canvas.getBoundingClientRect();const lane=Math.floor((e.clientX-rect.left)/LANE_WIDTH);const y=e.clientY-rect.top;if(!running) startGame(); else hit(lane,e.target===canvas?y:null);});
-    document.addEventListener('keydown',e=>{const laneMap={d:0,f:1,j:2,k:3}[e.key.toLowerCase()];if(!running) startGame(); else if(laneMap!==undefined) hit(laneMap,null);});
+    /* —— INPUT —— */
+    document.addEventListener('pointerdown',e=>{if(e.target===audioBtn) return;const rect=canvas.getBoundingClientRect();const lane=Math.floor((e.clientX-rect.left)/LANE_WIDTH);const y=e.clientY-rect.top;if(!running) startGame(); else hit(lane,e.target===canvas?y:null);});
+    document.addEventListener('keydown',e=>{const map={d:0,f:1,j:2,k:3}[e.key.toLowerCase()];if(!running) startGame(); else if(map!==undefined) hit(map,null);});
 
-    /* —— Init —— */
     updateScore(0);updateAudioIcon();
   })();
   </script>
 </body>
 </html>
+
