--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <!-- Audio (cross-origin allowed) -->
-  <audio id="bgm" crossorigin="anonymous" src="https://cdn.pixabay.com/download/audio/2022/10/18/audio_eda73d5557.mp3?filename=pop-hip-hop-bounce-124441.mp3" preload="auto"></audio>
+  <audio id="bgm" crossorigin="anonymous" src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Komiku/Komiku_-_Volatile/Komiku_-_Volatile_-_02_Paradigm_Shift.mp3" preload="auto"></audio>
 
   <!-- HUD -->
   <div id="score">Score 0</div>
@@ -88,4 +88,3 @@
   </script>
 </body>
 </html>
-
