--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </style>
 </head>
 <body>
-  <!-- Audio (cross-origin allowed) -->
-  <audio id="bgm" crossorigin="anonymous" src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Komiku/Komiku_-_Volatile/Komiku_-_Volatile_-_02_Paradigm_Shift.mp3" preload="auto"></audio>
+  <!-- Audio (Pixabay free CORS-friendly track) -->
+  <audio id="bgm" src="https://cdn.pixabay.com/download/audio/2022/10/21/audio_c0f4ea5d64.mp3?filename=hip-hop-urban-1239.mp3" preload="auto"></audio>
 
   <!-- HUD -->
   <div id="score">Score 0</div>
@@ -88,3 +88,4 @@
   </script>
 </body>
 </html>
+
