--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </style>
 </head>
 <body>
-  <audio id="bgm" crossorigin="anonymous" src="https://cdn.pixabay.com/download/audio/2022/10/21/audio_c0f4ea5d64.mp3?filename=hip-hop-urban-1239.mp3" preload="auto"></audio>
+  <audio id="bgm" crossorigin="anonymous" src="https://raw.githubusercontent.com/Anycircle11139s/Magictilesgooglesites/main/hip-hop-urban.mp3" preload="auto"></audio>
 
   <div id="score">Score 0</div>
   <button id="audioBtn" title="Toggle music">🔊</button>
